istio/frankfurt.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-alb
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: 	subnet-09455931037f15f3f, subnet-0c2b42f0dc70fcb11, subnet-0b9a0c788879de2f3
    alb.ingress.kubernetes.io/security-groups: sg-0ee08fc23c610e7b4
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: "30777"
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
            pathType: ImplementationSpecific
